--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
@@ -40,7 +41,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/client-preset": "^4.3.0",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript-react-query": "^6.1.0",
